...
          style={styles.twilioLogo}
          resizeMode="contain"
        />
      </View>
      <View style={styles.body}>
        <Text style={styles.text}>
          Welcome to Twilio's Voice SDK Reference App. Log in to get started!
        </Text>
        <TouchableOpacity
          style={styles.loginScreenButton}
          onPress={handleLogin}
          testID="login_button">
          <Text style={styles.loginText}>Log in</Text>
          <Image
            source={ArrowForward}
            resizeMode="contain"
            style={styles.arrowForward}
          />
...
